ultimas atualizacoes na analise dos dados e teste de balanc

--- a/01 - Data Analytics.ipynb
+++ b/01 - Data Analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,6 +764,29 @@
    ],
    "source": [
     "df[df['Stroke']==1]['HeartDisease'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Stroke\n",
+       "No     22984\n",
+       "Yes     4389\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['HeartDisease']==1]['Stroke'].value_counts()"
    ]
   },
   {
@@ -1258,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1293,7 @@
        "Name: count, dtype: float64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1281,25 +1304,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "PhysicalActivity\n",
-       "Yes    17489\n",
-       "No      9884\n",
-       "Name: count, dtype: int64"
+       "Yes    63.891426\n",
+       "No     36.108574\n",
+       "Name: count, dtype: float64"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df['HeartDisease']==1]['PhysicalActivity'].value_counts()"
+    "((df[df['HeartDisease']==1]['PhysicalActivity'].value_counts())/len(df[df['HeartDisease']==1]))*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PhysicalActivity\n",
+       "Yes    78.813496\n",
+       "No     21.186504\n",
+       "Name: count, dtype: float64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((df[df['HeartDisease']==0]['PhysicalActivity'].value_counts())/len(df[df['HeartDisease']==0]))*100"
    ]
   },
   {
@@ -1320,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1335,7 +1381,7 @@
        "Name: count, dtype: float64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1346,22 +1392,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "GenHealth\n",
-       "2    9558\n",
-       "1    7084\n",
-       "3    5381\n",
-       "0    3850\n",
-       "4    1500\n",
+       "Good         9558\n",
+       "Fair         7084\n",
+       "Very good    5381\n",
+       "Poor         3850\n",
+       "Excellent    1500\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1441,7 +1487,7 @@
     }
    ],
    "source": [
-    "df['SleepTime'].max()"
+    ".max()df['SleepTime']"
    ]
   },
   {
