atualizacoes data anal. e balanc

--- a/02 - Class Balancing.ipynb
+++ b/02 - Class Balancing.ipynb
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        "((319795, 18), (319795, 1))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
        "((239846, 18), (79949, 18), (239846, 1), (79949, 1))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,17 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "smote_enn = SMOTEENN(random_state=42)\n",
-    "X_smote_enn, y_smote_enn = smote_enn.fit_resample(X_treino, y_treino)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -544,13 +534,166 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "smote_enn = SMOTEENN(random_state=42)\n",
+    "X_smote_enn, y_smote_enn = smote_enn.fit_resample(X_treino, y_treino)\n",
     "y_smote_enn.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "HeartDisease\n",
+       "1               176938\n",
+       "0               121700\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "smote_enn = SMOTEENN(random_state=42, enn=EditedNearestNeighbours(sampling_strategy='all'))\n",
+    "X_smote_enn, y_smote_enn = smote_enn.fit_resample(X_treino, y_treino)\n",
+    "y_smote_enn.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\usuario\\Documents\\12° SEMESTRE\\TCC2\\.tcc\\Lib\\site-packages\\imblearn\\over_sampling\\_smote\\base.py:345: FutureWarning: The parameter `n_jobs` has been deprecated in 0.10 and will be removed in 0.12. You can pass an nearest neighbors estimator where `n_jobs` is already set instead.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "HeartDisease\n",
+       "1               176938\n",
+       "0               121700\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "smote_enn = SMOTEENN(random_state=42, sampling_strategy='not majority', n_jobs=-1)\n",
+    "X_smote_enn, y_smote_enn = smote_enn.fit_resample(X_treino, y_treino)\n",
+    "y_smote_enn.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\usuario\\Documents\\12° SEMESTRE\\TCC2\\.tcc\\Lib\\site-packages\\imblearn\\over_sampling\\_smote\\base.py:345: FutureWarning: The parameter `n_jobs` has been deprecated in 0.10 and will be removed in 0.12. You can pass an nearest neighbors estimator where `n_jobs` is already set instead.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "HeartDisease\n",
+       "0               138473\n",
+       "1                66624\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "smote_enn = SMOTEENN(random_state=42, sampling_strategy=0.5, n_jobs=-1)\n",
+    "X_smote_enn, y_smote_enn = smote_enn.fit_resample(X_treino, y_treino)\n",
+    "y_smote_enn.value_counts()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\usuario\\Documents\\12° SEMESTRE\\TCC2\\.tcc\\Lib\\site-packages\\imblearn\\over_sampling\\_smote\\base.py:345: FutureWarning: The parameter `n_jobs` has been deprecated in 0.10 and will be removed in 0.12. You can pass an nearest neighbors estimator where `n_jobs` is already set instead.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "HeartDisease\n",
+       "1               176938\n",
+       "0               121700\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "smote_enn = SMOTEENN(random_state=42, sampling_strategy='minority', n_jobs=-1)\n",
+    "X_smote_enn, y_smote_enn = smote_enn.fit_resample(X_treino, y_treino)\n",
+    "y_smote_enn.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "With over-sampling methods, the number of samples in a class should be greater or equal to the original number of samples. Originally, there is 219418 samples and 109709 samples are asked.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\usuario\\Documents\\12° SEMESTRE\\TCC2\\02 - Class Balancing.ipynb Cell 28\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/usuario/Documents/12%C2%B0%20SEMESTRE/TCC2/02%20-%20Class%20Balancing.ipynb#X43sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m smote_enn \u001b[39m=\u001b[39m SMOTEENN(random_state\u001b[39m=\u001b[39m\u001b[39m42\u001b[39m, sampling_strategy\u001b[39m=\u001b[39m{\u001b[39m0\u001b[39m:\u001b[39m109709\u001b[39m,\u001b[39m1\u001b[39m:\u001b[39m109709\u001b[39m}, n_jobs\u001b[39m=\u001b[39m\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/usuario/Documents/12%C2%B0%20SEMESTRE/TCC2/02%20-%20Class%20Balancing.ipynb#X43sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m X_smote_enn, y_smote_enn \u001b[39m=\u001b[39m smote_enn\u001b[39m.\u001b[39;49mfit_resample(X_treino, y_treino)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/usuario/Documents/12%C2%B0%20SEMESTRE/TCC2/02%20-%20Class%20Balancing.ipynb#X43sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m y_smote_enn\u001b[39m.\u001b[39mvalue_counts()\n",
+      "File \u001b[1;32mc:\\Users\\usuario\\Documents\\12° SEMESTRE\\TCC2\\.tcc\\Lib\\site-packages\\imblearn\\base.py:208\u001b[0m, in \u001b[0;36mBaseSampler.fit_resample\u001b[1;34m(self, X, y)\u001b[0m\n\u001b[0;32m    187\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Resample the dataset.\u001b[39;00m\n\u001b[0;32m    188\u001b[0m \n\u001b[0;32m    189\u001b[0m \u001b[39mParameters\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    205\u001b[0m \u001b[39m    The corresponding label of `X_resampled`.\u001b[39;00m\n\u001b[0;32m    206\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    207\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_validate_params()\n\u001b[1;32m--> 208\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49mfit_resample(X, y)\n",
+      "File \u001b[1;32mc:\\Users\\usuario\\Documents\\12° SEMESTRE\\TCC2\\.tcc\\Lib\\site-packages\\imblearn\\base.py:108\u001b[0m, in \u001b[0;36mSamplerMixin.fit_resample\u001b[1;34m(self, X, y)\u001b[0m\n\u001b[0;32m    105\u001b[0m arrays_transformer \u001b[39m=\u001b[39m ArraysTransformer(X, y)\n\u001b[0;32m    106\u001b[0m X, y, binarize_y \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_X_y(X, y)\n\u001b[1;32m--> 108\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msampling_strategy_ \u001b[39m=\u001b[39m check_sampling_strategy(\n\u001b[0;32m    109\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49msampling_strategy, y, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_sampling_type\n\u001b[0;32m    110\u001b[0m )\n\u001b[0;32m    112\u001b[0m output \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_fit_resample(X, y)\n\u001b[0;32m    114\u001b[0m y_ \u001b[39m=\u001b[39m (\n\u001b[0;32m    115\u001b[0m     label_binarize(output[\u001b[39m1\u001b[39m], classes\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39munique(y)) \u001b[39mif\u001b[39;00m binarize_y \u001b[39melse\u001b[39;00m output[\u001b[39m1\u001b[39m]\n\u001b[0;32m    116\u001b[0m )\n",
+      "File \u001b[1;32mc:\\Users\\usuario\\Documents\\12° SEMESTRE\\TCC2\\.tcc\\Lib\\site-packages\\imblearn\\utils\\_validation.py:536\u001b[0m, in \u001b[0;36mcheck_sampling_strategy\u001b[1;34m(sampling_strategy, y, sampling_type, **kwargs)\u001b[0m\n\u001b[0;32m    531\u001b[0m     \u001b[39mreturn\u001b[39;00m OrderedDict(\n\u001b[0;32m    532\u001b[0m         \u001b[39msorted\u001b[39m(SAMPLING_TARGET_KIND[sampling_strategy](y, sampling_type)\u001b[39m.\u001b[39mitems())\n\u001b[0;32m    533\u001b[0m     )\n\u001b[0;32m    534\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39misinstance\u001b[39m(sampling_strategy, \u001b[39mdict\u001b[39m):\n\u001b[0;32m    535\u001b[0m     \u001b[39mreturn\u001b[39;00m OrderedDict(\n\u001b[1;32m--> 536\u001b[0m         \u001b[39msorted\u001b[39m(_sampling_strategy_dict(sampling_strategy, y, sampling_type)\u001b[39m.\u001b[39mitems())\n\u001b[0;32m    537\u001b[0m     )\n\u001b[0;32m    538\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39misinstance\u001b[39m(sampling_strategy, \u001b[39mlist\u001b[39m):\n\u001b[0;32m    539\u001b[0m     \u001b[39mreturn\u001b[39;00m OrderedDict(\n\u001b[0;32m    540\u001b[0m         \u001b[39msorted\u001b[39m(_sampling_strategy_list(sampling_strategy, y, sampling_type)\u001b[39m.\u001b[39mitems())\n\u001b[0;32m    541\u001b[0m     )\n",
+      "File \u001b[1;32mc:\\Users\\usuario\\Documents\\12° SEMESTRE\\TCC2\\.tcc\\Lib\\site-packages\\imblearn\\utils\\_validation.py:314\u001b[0m, in \u001b[0;36m_sampling_strategy_dict\u001b[1;34m(sampling_strategy, y, sampling_type)\u001b[0m\n\u001b[0;32m    312\u001b[0m     \u001b[39mfor\u001b[39;00m class_sample, n_samples \u001b[39min\u001b[39;00m sampling_strategy\u001b[39m.\u001b[39mitems():\n\u001b[0;32m    313\u001b[0m         \u001b[39mif\u001b[39;00m n_samples \u001b[39m<\u001b[39m target_stats[class_sample]:\n\u001b[1;32m--> 314\u001b[0m             \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    315\u001b[0m                 \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mWith over-sampling methods, the number\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    316\u001b[0m                 \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m of samples in a class should be greater\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    317\u001b[0m                 \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m or equal to the original number of samples.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    318\u001b[0m                 \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m Originally, there is \u001b[39m\u001b[39m{\u001b[39;00mtarget_stats[class_sample]\u001b[39m}\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    319\u001b[0m                 \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39msamples and \u001b[39m\u001b[39m{\u001b[39;00mn_samples\u001b[39m}\u001b[39;00m\u001b[39m samples are asked.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    320\u001b[0m             )\n\u001b[0;32m    321\u001b[0m         sampling_strategy_[class_sample] \u001b[39m=\u001b[39m n_samples \u001b[39m-\u001b[39m target_stats[class_sample]\n\u001b[0;32m    322\u001b[0m \u001b[39melif\u001b[39;00m sampling_type \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39munder-sampling\u001b[39m\u001b[39m\"\u001b[39m:\n",
+      "\u001b[1;31mValueError\u001b[0m: With over-sampling methods, the number of samples in a class should be greater or equal to the original number of samples. Originally, there is 219418 samples and 109709 samples are asked."
+     ]
+    }
+   ],
+   "source": [
+    "smote_enn = SMOTEENN(random_state=42, sampling_strategy={0:109709,1:109709}, n_jobs=-1)\n",
+    "X_smote_enn, y_smote_enn = smote_enn.fit_resample(X_treino, y_treino)\n",
+    "y_smote_enn.value_counts()\n"
    ]
   },
   {
@@ -565,39 +708,6 @@
    "metadata": {},
    "source": [
     "https://imbalanced-learn.org/stable/references/generated/imblearn.combine.SMOTEENN.html"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "smote_enn = SMOTEENN(random_state=42, sampling_strategy='all')\n",
-    "X_smote_enn, y_smote_enn = smote_enn.fit_resample(X_treino, y_treino)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "HeartDisease\n",
-       "1               176938\n",
-       "0               121700\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_smote_enn.value_counts()"
    ]
   }
  ],
