--- a/03 - TestingModel.ipynb
+++ b/03 - TestingModel.ipynb
@@ -280,7 +280,7 @@
     "            bal = RandomUnderSampler(random_state=42)\n",
     "            X_split_treino, y_split_treino = bal.fit_resample(X_split_treino, y_split_treino)\n",
     "        elif balanceamento =='SMOTEENN':\n",
-    "            bal = SMOTEENN(random_state=42, sampling_strategy='all')\n",
+    "            bal = SMOTEENN(random_state=42, sampling_strategy=0.5, n_jobs=-1)\n",
     "            X_split_treino, y_split_treino = bal.fit_resample(X_split_treino, y_split_treino)\n",
     "        else:\n",
     "            print('Os tipos de balanceamento são: Oversampling, Undersampling e SMOTEENN ')\n",
