--- a/03 - TestingModel.ipynb
+++ b/03 - TestingModel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,13 +251,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "classificador_RF = RandomForestClassifier()\n",
     "classificador_DT = DecisionTreeClassifier()\n",
     "classificador_XGB = xgb.XGBClassifier()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'objective': 'binary:logistic', 'base_score': None, 'booster': None, 'callbacks': None, 'colsample_bylevel': None, 'colsample_bynode': None, 'colsample_bytree': None, 'device': None, 'early_stopping_rounds': None, 'enable_categorical': False, 'eval_metric': None, 'feature_types': None, 'gamma': None, 'grow_policy': None, 'importance_type': None, 'interaction_constraints': None, 'learning_rate': None, 'max_bin': None, 'max_cat_threshold': None, 'max_cat_to_onehot': None, 'max_delta_step': None, 'max_depth': None, 'max_leaves': None, 'min_child_weight': None, 'missing': nan, 'monotone_constraints': None, 'multi_strategy': None, 'n_estimators': None, 'n_jobs': None, 'num_parallel_tree': None, 'random_state': None, 'reg_alpha': None, 'reg_lambda': None, 'sampling_method': None, 'scale_pos_weight': None, 'subsample': None, 'tree_method': None, 'validate_parameters': None, 'verbosity': None}\n"
+     ]
+    }
+   ],
+   "source": [
+    "param = classificador_XGB.get_params()\n",
+    "print(param)"
    ]
   },
   {
@@ -1651,7 +1669,7 @@
     }
    ],
    "source": [
-    "feature_importances = classificador_DT.feature_importances_\n",
+    "feature_importances = classificador_RF.feature_importances_\n",
     "feature_names = X.columns\n",
     "\n",
     "plt.figure(figsize=(15,5))\n",
